fix: toggle /mo in label depending on case

--- a/donate.html
+++ b/donate.html
@@ -1013,13 +1013,32 @@
           var custom_amount = document.querySelector('#ak-other-amount-field').value;
           if (!custom_amount) amount += button_amount;
           else amount += custom_amount;
-          if ($('#id_donation_type_recurring').is(':checked')) {
+
+          //Toggle - once default case
+          // if ($('input[name="donation_type"][type="hidden"]').val() === 'single' || $('input[name="donation_type"][type="checkbox"]').val() === 'recurring') {
+          if ($('input[name="donation_type"][type="checkbox"]').val() === 'recurring') {
+            if ($('#id_donation_type_recurring').is(':checked')) {
+              amount += '/mo';
+            }
+            else {
+              amount.replace('/mo', '');
+            }
+          }
+          //Toggle - monthly default case
+          else if ($('input[name="donation_type"][type="checkbox"]').val() === 'single') {
+            if ($('#id_donation_type_recurring').is(':checked')) {
+              amount.replace('/mo', '');
+            }
+            else {
+              amount += '/mo';
+            }
+          }
+          //No toggle - monthly default case
+          else if ($('input[name="donation_type"][type="hidden"]').val() === 'single') {
             amount += '/mo';
           }
-          else {
-            amount.replace('/mo', '');
-          }
-          console.log('button amount', button_amount, 'custom amount', custom_amount, 'amount', amount);
+
+          // console.log('button amount', button_amount, 'custom amount', custom_amount, 'amount', amount);
           $('input[name="ak-donate-step"]:checked')
             .closest('label')
             .find('span.ak-amount-label')
