fix: showing /mo in monthly only page

--- a/donate.html
+++ b/donate.html
@@ -1034,7 +1034,7 @@
             }
           }
           //No toggle - monthly default case
-          else if ($('input[name="donation_type"][type="hidden"]').val() === 'single') {
+          else if ($('input[name="donation_type"][type="hidden"]').val() === 'recurring') {
             amount += '/mo';
           }
 
