Attempt #10 to solve the weird bug that forces the buttons to appear at step 3

--- a/donate.html
+++ b/donate.html
@@ -679,6 +679,22 @@
 
 <script language="javascript">
 //<!--
+    // GLOBALS. This definitely needs to change once the setup is improved.
+    let paypalFieldSelectedStepThree = false;
+    let ccFieldsSelectedStepThree = true;
+
+    // Use this to hide fields as appropriately
+    const toggleShowFields = (fields, show) => {
+      $.each(fields, (index, field)=>{
+        const fieldCtn = $(field);
+        fieldCtn.css({'display': show ? 'block': 'none'});
+      });
+    };
+
+    // Get CC & PayPal Fields
+    const ccFields = $(".cc-fields");
+    const paypalFields = $("paypal-fields");
+
     function clear_radio_buttons() {
         $('input.ak-amount-radio-button').prop('checked', false);
     }
@@ -942,7 +958,14 @@
           ); */
 			    $('.ak-donate-area-step-3').fadeIn( speed );
 					$('.ak-donate-step').removeClass('active-step');
-					$('.ak-donate-step-3').addClass('active-step');
+          $('.ak-donate-step-3').addClass('active-step');
+          if(paypalFieldSelectedStepThree){
+            toggleShowFields(paypalFields, true);
+            toggleShowFields(ccFields, false);
+          } else {
+            toggleShowFields(paypalFields, false);
+            toggleShowFields(ccFields, true);
+          }
         }
     }
 
@@ -1525,9 +1548,9 @@
     // const paymentsDetailsContent = $("#payments-details-content");
     // const continueButton = $("#ak-continue-button");
 
-    // Get CC & PayPal Fields
-    const ccFields = $(".cc-fields");
-    const paypalFields = $("paypal-fields");
+    // // Get CC & PayPal Fields
+    // const ccFields = $(".cc-fields");
+    // const paypalFields = $("paypal-fields");
 
     const removeActivePaymentsClass = () => {
       $.each(paymentsTitles, (index, title)=>{
@@ -1536,14 +1559,13 @@
       });
     };
 
-    // Use this to hide fields as appropriately
-    const toggleShowFields = (fields, show) => {
-      $.each(fields, (index, field)=>{
-        const fieldCtn = $(field);
-        fieldCtn.css({'display': show ? 'block': 'none'});
-      });
-    };
-
+    // // Use this to hide fields as appropriately
+    // const toggleShowFields = (fields, show) => {
+    //   $.each(fields, (index, field)=>{
+    //     const fieldCtn = $(field);
+    //     fieldCtn.css({'display': show ? 'block': 'none'});
+    //   });
+    // };
 
 
     $.each(paymentsTitles, (index, title)=>{
@@ -1557,10 +1579,14 @@
 
             if(closestDiv.hasClass(CONSTANTS.PAYPAL_TARGET_CLASS)){
                 toggleShowFields(paypalFields, true);
+                paypalFieldSelectedStepThree = true;
+                ccFieldsSelectedStepThree = false;
                 toggleShowFields(ccFields, false);
                 paypalButton.css({display: 'inline-block'});
             } else {
                 toggleShowFields(ccFields, true);
+                paypalFieldSelectedStepThree = false;
+                ccFieldsSelectedStepThree = true;
                 toggleShowFields(paypalFields, false);
                 paypalButton.css({display: 'none'});
    
@@ -1578,10 +1604,15 @@
           if(clicked.hasClass(CONSTANTS.PAYPAL_TARGET_CLASS)){
               toggleShowFields(paypalFields, true);
               toggleShowFields(ccFields, false);
+
+              paypalFieldSelectedStepThree = true;
+              ccFieldsSelectedStepThree = false;
               paypalButton.css({display: 'inline-block'});
           } else {
               toggleShowFields(ccFields, true);
               toggleShowFields(paypalFields, false);
+              paypalFieldSelectedStepThree = false;
+              ccFieldsSelectedStepThree = true;
               paypalButton.css({display: 'none'});
     
           }
