Remove unnamed variable

--- a/donate.html
+++ b/donate.html
@@ -1624,7 +1624,7 @@
       $.each(paymentsTitles, (index, title)=>{
           const titleCtn = $(title);
           titleCtn.removeClass(CONSTANTS.ACTIVE_PAYMENTS_CLASS);
-          paypalFieldSelectedStepThree = falsgse;
+          paypalFieldSelectedStepThree = false;
           ccFieldsSelectedStepThree = true;
       });
     };
