Attempt #6. Hoisting failed. Defining JS variables atop

--- a/donate.html
+++ b/donate.html
@@ -698,6 +698,18 @@
 //<!--
     let paypalFieldOptionSelectedStepThree = false;
 
+    // Get CC & PayPal Fields
+    const ccFields = $(".cc-fields");
+    const paypalFields = $("paypal-fields");
+
+    // Use this to hide fields as appropriately
+    const toggleShowFields = (fields, show) => {
+      $.each(fields, (index, field)=>{
+        const fieldCtn = $(field);
+        fieldCtn.css({'display': show ? 'block': 'none'});
+      });
+    };
+
     function clear_radio_buttons() {
         $('input.ak-amount-radio-button').prop('checked', false);
     }
@@ -1605,9 +1617,9 @@
     // const paymentsDetailsContent = $("#payments-details-content");
     // const continueButton = $("#ak-continue-button");
 
-    // Get CC & PayPal Fields
-    const ccFields = $(".cc-fields");
-    const paypalFields = $("paypal-fields");
+    // // Get CC & PayPal Fields
+    // const ccFields = $(".cc-fields");
+    // const paypalFields = $("paypal-fields");
 
     const removeActivePaymentsClass = () => {
       $.each(paymentsTitles, (index, title)=>{
@@ -1619,12 +1631,12 @@
     };
 
     // Use this to hide fields as appropriately
-    const toggleShowFields = (fields, show) => {
-      $.each(fields, (index, field)=>{
-        const fieldCtn = $(field);
-        fieldCtn.css({'display': show ? 'block': 'none'});
-      });
-    };
+    // const toggleShowFields = (fields, show) => {
+    //   $.each(fields, (index, field)=>{
+    //     const fieldCtn = $(field);
+    //     fieldCtn.css({'display': show ? 'block': 'none'});
+    //   });
+    // };
 
 
     $.each(paymentsTitles, (index, title)=>{
