--- a/donate.html
+++ b/donate.html
@@ -603,7 +603,11 @@
 	        	<input type="hidden" name="paypal" value="0" id="ak-pay-by-paypal">
             <p class="margin-bottom-small text-small">
               <!-- <em>{% filter ak_text:"donate_or_check_out_with" %}or check out with{% endfilter %} </em>  -->
-              <button type="submit" id="ak-paypal-button" class="button paypal-fields">{% filter ak_text:"continue_to_paypal" %} Continue to PayPal {% endfilter %}</button></p>
+              <button type="submit" id="ak-paypal-button" class="button paypal-fields">
+                  {% filter ak_text:"donate_submit_button" %}Donate{% endfilter %}&nbsp;<span class="ak-currency-sym">{{ page.currency_sym }}</span><span class="ak-donation-total-amount"></span>&nbsp;<span class="ak-donation-monthly">{% filter ak_text:"donate_monthly" %}monthly{% endfilter %}</span>&nbsp;{% filter ak_text:"donate_with_paypal" %}with PayPal{% endfilter %}
+              
+              
+              </button></p>
 	        </div>
 				  {% endif %}
           </div><!--ak-styled-fields-->
