small copy tweak to bubble text

--- a/donate.html
+++ b/donate.html
@@ -322,7 +322,7 @@
               future.{% endfilter %}</div>
             <div class='monthly-chosen'>{% filter ak_text:"donate_monthly_thank_you" %}<strong>Thank you for choosing a
                 monthly donation!</strong><br>
-              Giving monthly helps us plan for big, bold actions and fight back against the fossil fuel industry at key
+              Giving monthly helps us plan for big, bold actions to fight back against the fossil fuel industry at key
               moments
               around the world. Thank you.{% endfilter %}</div>
           </div>
@@ -346,7 +346,7 @@
               <div class="once-chosen">{% filter ak_text:"donate_make_it_monthly" %}<strong>Make it monthly?</strong> Sustaining donations help us plan and focus on the
                 future.{% endfilter %}</div>
               <div class='monthly-chosen hidden'>{% filter ak_text:"donate_monthly_thank_you" %}<strong>Thank you for choosing a monthly donation!</strong><br>
-                Giving monthly helps us plan for big, bold actions and fight back against the fossil fuel industry at key moments
+                Giving monthly helps us plan for big, bold actions to fight back against the fossil fuel industry at key moments
                 around the world. Thank you.{% endfilter %}</div>
             </div>
           </div>
