--- a/donate.html
+++ b/donate.html
@@ -604,7 +604,7 @@
             <p class="margin-bottom-small text-small">
               <!-- <em>{% filter ak_text:"donate_or_check_out_with" %}or check out with{% endfilter %} </em>  -->
               <button type="submit" id="ak-paypal-button" class="button paypal-fields">
-                {% filter ak_text:"continue_to_paypal" %} Continue To PayPal {% endfilter %}              
+                {% filter ak_text:"continue_with_paypal" %} Continue with PayPal {% endfilter %}              
               </button></p>
 	        </div>
 				  {% endif %}
