Alignments and included feedback from maths

--- a/donate.html
+++ b/donate.html
@@ -360,7 +360,7 @@
 
 {% if page.custom_fields.donation_show_inhonorof|lower == "show" %}
         <fieldset id="in-honor-of" class="ak-donate-area-step-1 form-style-labelabove">
-          <div class="input checkbox input-checkbox margin-top-none text-strong">
+          <div class="input checkbox input-checkbox margin-top-small margin-bottom-none text-strong">
             <input type="checkbox" value="1" name="inhonorcheck" id="in-honor-check" />
             <label for="in-honor-check">{% filter ak_text:"donate_inhonorof_option_label" %}Donate in someone's honor.{% endfilter %}</label>
           </div>
